# FastAPI_Back_WebApp

./: README.md  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/versions/: 2025_12_10_0550-a3fc2cbd20b8_create_products_table.py  2025_12_10_0556-dadf87a9ff50_create_users_table.py  2025_12_10_0620-f331ac009e43_create_posts_table.py  2025_12_10_0651-e2b8a749f2a2_create_profile_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  view.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
